--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,5 @@
-[user]
-	email =
-	name =
 [github]
-	user =
+	user = flygare
 [color]
     branch = auto
     diff = auto
@@ -21,7 +18,7 @@
 	editor = vi
     pager = less -SE
 [alias]
-    ci = commit
+    cm = commit -m 
     co = checkout
 	ba = branch -a
 	br = branch
