--- a/.gitconfig
+++ b/.gitconfig
@@ -27,6 +27,8 @@
     whitespace = space-before-tab,-indent-with-non-tab,trailing-space
 
 [alias]
+    poh = push origin HEAD
+    pof = push origin HEAD -f
     cm = commit -m 
     co = checkout
 	ba = branch -a
