--- a/.gitconfig
+++ b/.gitconfig
@@ -1,51 +1,44 @@
 [include]
-    path = .gitconfig.local
+	path = .gitconfig.local
+
 [color]
-    branch = auto
-    diff = auto
-    interactive = auto
-    pager = true
-    status = auto
-    ui = true
+	branch = auto
+	diff = auto
+	interactive = auto
+	pager = true
+	status = auto
+	ui = true
 
 [color "status"]
-    added = green
-    changed = yellow
-    untracked = red
+	added = green
+	changed = yellow
+	untracked = red
 
 [push]
-    default = current
+	default = current
 
 [core]
-    autocrlf = input
+	autocrlf = input
 	editor = vi
-    pager = less -SE
-
-    # Treat spaces before tabs and all kinds of trailing whitespace as an error
-    # [default] trailing-space: looks for spaces at the end of a line
-    # [default] space-before-tab: looks for spaces before tabs at the beginning of a line
-    whitespace = space-before-tab,-indent-with-non-tab,trailing-space
+	pager = less
+	# Treat spaces before tabs and all kinds of trailing whitespace as an error
+	whitespace = space-before-tab,-indent-with-non-tab,trailing-space
 
 [alias]
-    poh = push origin HEAD
-    pof = push origin HEAD --force-with-lease
-    cm = commit -m 
-    co = checkout
+	poh = push origin HEAD
+	pof = push origin HEAD --force-with-lease
+	cm = commit -m
+	co = checkout
 	ba = branch -a
 	br = branch
-    st = status -sb
-    lg = log --graph --pretty=format:'%C(bold red)%h%C(reset) ---%C(yellow)%d%C(reset) %s %C(bold green)(%cr)%C(reset) %C(bold blue)by%C(reset) %cn, %cE'
-    
-    # Amend the currently staged files to the latest commit
-    amend = commit --amend --reuse-message=HEAD --date=now
-
-    # Remove branches that have already been merged with master
-    # a.k.a. ‘delete merged’
-    dm = "!git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d"
-
-    # List contributors with number of commits
-    contributors = shortlog --summary --numbered
+	st = status -sb
+	lg = log --graph --pretty=format:'%C(bold red)%h%C(reset) ---%C(yellow)%d%C(reset) %s %C(bold green)(%cr)%C(reset) %C(bold blue)by%C(reset) %cn, %cE'
+	contributors = shortlog --summary --numbered
+	# Amend the currently staged files to the latest commit
+	amend = commit --amend --reuse-message=HEAD --date=now
+	# Remove branches that have already been merged with master. ‘delete merged’
+	dm = "!git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d"
 
 [apply]
-    # Detect whitespace errors when applying a patch
-    whitespace = fix
+	# Detect whitespace errors when applying a patch
+	whitespace = fix
