Change to Subtree instead of Submodule (#4)
* Remove timelog

* Squashed 'timelog/' content from commit 14e1acc

git-subtree-dir: timelog
git-subtree-split: 14e1accd8ae8cc0d17ebe99305ce866934c7aa50

* Add alias for subtree

--- a/.gitconfig
+++ b/.gitconfig
@@ -38,6 +38,10 @@
 	amend = commit --amend --reuse-message=HEAD --date=now
 	# Remove branches that have already been merged with master. ‘delete merged’
 	dm = "!git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d"
+	# the acronym stands for "subtree add". Usage: git sba <repo url> <dest folder>
+	sba = "!f() { git subtree add --prefix $2 $1 master --squash; }; f"
+	# the acronym stands for "subtree update". Usage: git sbu <repo url> <dest folder>
+	sbu = "!f() { git subtree pull --prefix $2 $1 master --squash; }; f" 
 
 [apply]
 	# Detect whitespace errors when applying a patch
